# hattis

./: .gitignore  CHANGELOG.md  README.md  flake.nix  hattis.cabal  mkMain.sh
app/: Abracadabra.hs  CalculusOfAda.hs  Echo.hs  ExactlyElectrical.hs  Hardware.hs  Julemost.hs  Main.hs  Parking.hs  Password.hs  Railroad.hs  Reseto.hs  TakeTwoStones.hs  Tildes.hs  Triarea.hs  mkMain.sh
src/: ARationalSequenceTake3.hs  DealOfTheDay.hs  Espresso.hs  FizzBuzz.hs  Geppetto.hs  KeepItCool.hs  Knitpicking.hs  Kolone.hs  Kutevi.hs  Lektira.hs  LineThemUp.hs  Main.hs  MinimumScalarProduct.hs  Mjehuric.hs  MusicalScales.hs  Nafnagift.hs  Ostgotska.hs  Patuljci.hs  PaulEigon.hs  PervasiveHeartMonitor.hs  PizzaCrust.hs  PlantingTrees.hs  Prva.hs  Reseto.hs  ReverseRot.hs  Rijeci.hs  SecretMessage.hs  Soylent.hs  ThePlank.hs
