cabal-version: 3.0
name:          hattis
version:       0.1.0.0
license:
author:        Joe
maintainer:    joe@example.com
build-type:    Simple

common warnings
  ghc-options: -Wall -Wno-incomplete-patterns -Wno-incomplete-uni-patterns

executable hattis
  import:             warnings
  main-is:            Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Abracadabra
    CalculusOfAda
    DealOfTheDay
    Echo
    Espresso
    ExactlyElectrical
    FizzBuzz
    Geppetto
    Hardware
    Julemost
    Kutevi
    Lektira
    Parking
    Password
    Railroad
    Reseto
    TakeTwoStones
    ThePlank
    Tildes
    Triarea

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , array
    , base
    , containers
    , parsec
    , scanner
    , split
    , text
    , vector

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
